AntlrParserTrial/SQLParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.10.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from SQL.g4 by ANTLR 4.10.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.10.1")]
[System.CLSCompliant(false)]
public partial class SQLParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, AND=4, OR=5, AS=6, WHERE=7, ON=8, SELECT=9, FROM=10, 
		JOIN=11, DOT=12, COMMA=13, SPACE=14, EOL=15, MATH_SIGN=16, BOOL_OPS=17, 
		IDENTIFIER=18, NUMBER=19, STRING=20, WS=21;
	public const int
		RULE_statement = 0, RULE_basicSelectStatement = 1, RULE_joinedSelectStatement = 2, 
		RULE_basicSelector = 3, RULE_joinedSelector = 4, RULE_basicTargetter = 5, 
		RULE_joinedTargetter = 6, RULE_joinedMatcher = 7, RULE_whereLookup = 8, 
		RULE_asStatement = 9, RULE_variableAssignmentIdentifier = 10, RULE_specificIdentifier = 11, 
		RULE_function = 12, RULE_boolFunction = 13, RULE_variable = 14;
	public static readonly string[] ruleNames = {
		"statement", "basicSelectStatement", "joinedSelectStatement", "basicSelector", 
		"joinedSelector", "basicTargetter", "joinedTargetter", "joinedMatcher", 
		"whereLookup", "asStatement", "variableAssignmentIdentifier", "specificIdentifier", 
		"function", "boolFunction", "variable"
	};

	private static readonly string[] _LiteralNames = {
		null, "'='", "'('", "')'", "'AND'", "'OR'", "'AS'", "'WHERE'", "'ON'", 
		"'SELECT'", "'FROM'", "'JOIN'", "'.'", "','"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, "AND", "OR", "AS", "WHERE", "ON", "SELECT", "FROM", 
		"JOIN", "DOT", "COMMA", "SPACE", "EOL", "MATH_SIGN", "BOOL_OPS", "IDENTIFIER", 
		"NUMBER", "STRING", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SQL.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static SQLParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SQLParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SQLParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EOL() { return GetToken(SQLParser.EOL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BasicSelectStatementContext basicSelectStatement() {
			return GetRuleContext<BasicSelectStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public JoinedSelectStatementContext joinedSelectStatement() {
			return GetRuleContext<JoinedSelectStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public WhereLookupContext whereLookup() {
			return GetRuleContext<WhereLookupContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISQLListener typedListener = listener as ISQLListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISQLListener typedListener = listener as ISQLListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 0, RULE_statement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 32;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				{
				State = 30;
				basicSelectStatement();
				}
				break;
			case 2:
				{
				State = 31;
				joinedSelectStatement();
				}
				break;
			}
			State = 35;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WHERE) {
				{
				State = 34;
				whereLookup();
				}
			}

			State = 37;
			Match(EOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BasicSelectStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public BasicSelectorContext basicSelector() {
			return GetRuleContext<BasicSelectorContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BasicTargetterContext basicTargetter() {
			return GetRuleContext<BasicTargetterContext>(0);
		}
		public BasicSelectStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_basicSelectStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISQLListener typedListener = listener as ISQLListener;
			if (typedListener != null) typedListener.EnterBasicSelectStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISQLListener typedListener = listener as ISQLListener;
			if (typedListener != null) typedListener.ExitBasicSelectStatement(this);
		}
	}

	[RuleVersion(0)]
	public BasicSelectStatementContext basicSelectStatement() {
		BasicSelectStatementContext _localctx = new BasicSelectStatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_basicSelectStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 39;
			basicSelector();
			State = 40;
			basicTargetter();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class JoinedSelectStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public JoinedSelectorContext joinedSelector() {
			return GetRuleContext<JoinedSelectorContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public JoinedTargetterContext joinedTargetter() {
			return GetRuleContext<JoinedTargetterContext>(0);
		}
		public JoinedSelectStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_joinedSelectStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISQLListener typedListener = listener as ISQLListener;
			if (typedListener != null) typedListener.EnterJoinedSelectStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISQLListener typedListener = listener as ISQLListener;
			if (typedListener != null) typedListener.ExitJoinedSelectStatement(this);
		}
	}

	[RuleVersion(0)]
	public JoinedSelectStatementContext joinedSelectStatement() {
		JoinedSelectStatementContext _localctx = new JoinedSelectStatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_joinedSelectStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 42;
			joinedSelector();
			State = 43;
			joinedTargetter();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BasicSelectorContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SELECT() { return GetToken(SQLParser.SELECT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] IDENTIFIER() { return GetTokens(SQLParser.IDENTIFIER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER(int i) {
			return GetToken(SQLParser.IDENTIFIER, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(SQLParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(SQLParser.COMMA, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AsStatementContext[] asStatement() {
			return GetRuleContexts<AsStatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public AsStatementContext asStatement(int i) {
			return GetRuleContext<AsStatementContext>(i);
		}
		public BasicSelectorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_basicSelector; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISQLListener typedListener = listener as ISQLListener;
			if (typedListener != null) typedListener.EnterBasicSelector(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISQLListener typedListener = listener as ISQLListener;
			if (typedListener != null) typedListener.ExitBasicSelector(this);
		}
	}

	[RuleVersion(0)]
	public BasicSelectorContext basicSelector() {
		BasicSelectorContext _localctx = new BasicSelectorContext(Context, State);
		EnterRule(_localctx, 6, RULE_basicSelector);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 45;
			Match(SELECT);
			State = 46;
			Match(IDENTIFIER);
			State = 54;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 47;
				Match(COMMA);
				State = 50;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
				case 1:
					{
					State = 48;
					Match(IDENTIFIER);
					}
					break;
				case 2:
					{
					State = 49;
					asStatement();
					}
					break;
				}
				}
				}
				State = 56;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class JoinedSelectorContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SELECT() { return GetToken(SQLParser.SELECT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public SpecificIdentifierContext[] specificIdentifier() {
			return GetRuleContexts<SpecificIdentifierContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SpecificIdentifierContext specificIdentifier(int i) {
			return GetRuleContext<SpecificIdentifierContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(SQLParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(SQLParser.COMMA, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AsStatementContext[] asStatement() {
			return GetRuleContexts<AsStatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public AsStatementContext asStatement(int i) {
			return GetRuleContext<AsStatementContext>(i);
		}
		public JoinedSelectorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_joinedSelector; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISQLListener typedListener = listener as ISQLListener;
			if (typedListener != null) typedListener.EnterJoinedSelector(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISQLListener typedListener = listener as ISQLListener;
			if (typedListener != null) typedListener.ExitJoinedSelector(this);
		}
	}

	[RuleVersion(0)]
	public JoinedSelectorContext joinedSelector() {
		JoinedSelectorContext _localctx = new JoinedSelectorContext(Context, State);
		EnterRule(_localctx, 8, RULE_joinedSelector);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 57;
			Match(SELECT);
			State = 58;
			specificIdentifier();
			State = 66;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 59;
				Match(COMMA);
				State = 62;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
				case 1:
					{
					State = 60;
					specificIdentifier();
					}
					break;
				case 2:
					{
					State = 61;
					asStatement();
					}
					break;
				}
				}
				}
				State = 68;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BasicTargetterContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FROM() { return GetToken(SQLParser.FROM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public SpecificIdentifierContext specificIdentifier() {
			return GetRuleContext<SpecificIdentifierContext>(0);
		}
		public BasicTargetterContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_basicTargetter; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISQLListener typedListener = listener as ISQLListener;
			if (typedListener != null) typedListener.EnterBasicTargetter(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISQLListener typedListener = listener as ISQLListener;
			if (typedListener != null) typedListener.ExitBasicTargetter(this);
		}
	}

	[RuleVersion(0)]
	public BasicTargetterContext basicTargetter() {
		BasicTargetterContext _localctx = new BasicTargetterContext(Context, State);
		EnterRule(_localctx, 10, RULE_basicTargetter);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 69;
			Match(FROM);
			State = 70;
			specificIdentifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class JoinedTargetterContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FROM() { return GetToken(SQLParser.FROM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public VariableAssignmentIdentifierContext[] variableAssignmentIdentifier() {
			return GetRuleContexts<VariableAssignmentIdentifierContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableAssignmentIdentifierContext variableAssignmentIdentifier(int i) {
			return GetRuleContext<VariableAssignmentIdentifierContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode JOIN() { return GetToken(SQLParser.JOIN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ON() { return GetToken(SQLParser.ON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public JoinedMatcherContext joinedMatcher() {
			return GetRuleContext<JoinedMatcherContext>(0);
		}
		public JoinedTargetterContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_joinedTargetter; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISQLListener typedListener = listener as ISQLListener;
			if (typedListener != null) typedListener.EnterJoinedTargetter(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISQLListener typedListener = listener as ISQLListener;
			if (typedListener != null) typedListener.ExitJoinedTargetter(this);
		}
	}

	[RuleVersion(0)]
	public JoinedTargetterContext joinedTargetter() {
		JoinedTargetterContext _localctx = new JoinedTargetterContext(Context, State);
		EnterRule(_localctx, 12, RULE_joinedTargetter);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 72;
			Match(FROM);
			State = 73;
			variableAssignmentIdentifier();
			State = 74;
			Match(JOIN);
			State = 75;
			variableAssignmentIdentifier();
			State = 76;
			Match(ON);
			State = 77;
			joinedMatcher();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class JoinedMatcherContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SpecificIdentifierContext[] specificIdentifier() {
			return GetRuleContexts<SpecificIdentifierContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SpecificIdentifierContext specificIdentifier(int i) {
			return GetRuleContext<SpecificIdentifierContext>(i);
		}
		public JoinedMatcherContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_joinedMatcher; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISQLListener typedListener = listener as ISQLListener;
			if (typedListener != null) typedListener.EnterJoinedMatcher(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISQLListener typedListener = listener as ISQLListener;
			if (typedListener != null) typedListener.ExitJoinedMatcher(this);
		}
	}

	[RuleVersion(0)]
	public JoinedMatcherContext joinedMatcher() {
		JoinedMatcherContext _localctx = new JoinedMatcherContext(Context, State);
		EnterRule(_localctx, 14, RULE_joinedMatcher);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 79;
			specificIdentifier();
			State = 80;
			Match(T__0);
			State = 81;
			specificIdentifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WhereLookupContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WHERE() { return GetToken(SQLParser.WHERE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public VariableContext[] variable() {
			return GetRuleContexts<VariableContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableContext variable(int i) {
			return GetRuleContext<VariableContext>(i);
		}
		public WhereLookupContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_whereLookup; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISQLListener typedListener = listener as ISQLListener;
			if (typedListener != null) typedListener.EnterWhereLookup(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISQLListener typedListener = listener as ISQLListener;
			if (typedListener != null) typedListener.ExitWhereLookup(this);
		}
	}

	[RuleVersion(0)]
	public WhereLookupContext whereLookup() {
		WhereLookupContext _localctx = new WhereLookupContext(Context, State);
		EnterRule(_localctx, 16, RULE_whereLookup);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 83;
			Match(WHERE);
			State = 85;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 84;
					variable();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 87;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,6,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AsStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SpecificIdentifierContext[] specificIdentifier() {
			return GetRuleContexts<SpecificIdentifierContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SpecificIdentifierContext specificIdentifier(int i) {
			return GetRuleContext<SpecificIdentifierContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AS() { return GetToken(SQLParser.AS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(SQLParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] MATH_SIGN() { return GetTokens(SQLParser.MATH_SIGN); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MATH_SIGN(int i) {
			return GetToken(SQLParser.MATH_SIGN, i);
		}
		public AsStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_asStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISQLListener typedListener = listener as ISQLListener;
			if (typedListener != null) typedListener.EnterAsStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISQLListener typedListener = listener as ISQLListener;
			if (typedListener != null) typedListener.ExitAsStatement(this);
		}
	}

	[RuleVersion(0)]
	public AsStatementContext asStatement() {
		AsStatementContext _localctx = new AsStatementContext(Context, State);
		EnterRule(_localctx, 18, RULE_asStatement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 89;
			specificIdentifier();
			State = 94;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==MATH_SIGN) {
				{
				{
				State = 90;
				Match(MATH_SIGN);
				State = 91;
				specificIdentifier();
				}
				}
				State = 96;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 97;
			Match(AS);
			State = 98;
			Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableAssignmentIdentifierContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] IDENTIFIER() { return GetTokens(SQLParser.IDENTIFIER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER(int i) {
			return GetToken(SQLParser.IDENTIFIER, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SpecificIdentifierContext specificIdentifier() {
			return GetRuleContext<SpecificIdentifierContext>(0);
		}
		public VariableAssignmentIdentifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variableAssignmentIdentifier; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISQLListener typedListener = listener as ISQLListener;
			if (typedListener != null) typedListener.EnterVariableAssignmentIdentifier(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISQLListener typedListener = listener as ISQLListener;
			if (typedListener != null) typedListener.ExitVariableAssignmentIdentifier(this);
		}
	}

	[RuleVersion(0)]
	public VariableAssignmentIdentifierContext variableAssignmentIdentifier() {
		VariableAssignmentIdentifierContext _localctx = new VariableAssignmentIdentifierContext(Context, State);
		EnterRule(_localctx, 20, RULE_variableAssignmentIdentifier);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 102;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
			case 1:
				{
				State = 100;
				specificIdentifier();
				}
				break;
			case 2:
				{
				State = 101;
				Match(IDENTIFIER);
				}
				break;
			}
			State = 104;
			Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SpecificIdentifierContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] IDENTIFIER() { return GetTokens(SQLParser.IDENTIFIER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER(int i) {
			return GetToken(SQLParser.IDENTIFIER, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOT() { return GetToken(SQLParser.DOT, 0); }
		public SpecificIdentifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_specificIdentifier; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISQLListener typedListener = listener as ISQLListener;
			if (typedListener != null) typedListener.EnterSpecificIdentifier(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISQLListener typedListener = listener as ISQLListener;
			if (typedListener != null) typedListener.ExitSpecificIdentifier(this);
		}
	}

	[RuleVersion(0)]
	public SpecificIdentifierContext specificIdentifier() {
		SpecificIdentifierContext _localctx = new SpecificIdentifierContext(Context, State);
		EnterRule(_localctx, 22, RULE_specificIdentifier);
		try {
			State = 110;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,9,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 106;
				Match(IDENTIFIER);
				State = 107;
				Match(DOT);
				State = 108;
				Match(IDENTIFIER);
				}
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 109;
				Match(IDENTIFIER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
